Fixed issue for horizontal scroll in body

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body{
   line-height: 1.43;
   letter-spacing: 0.01071em;
   background-color: #fafafa !important;
+  overflow-x: hidden;
 }
 
 .App {
